@@ -108,6 +108,9 @@ public:
     void set_input_device(const std::string device);
     void set_output_device(const std::string device);
 
+    std::vector<std::string> get_antennas(void);
+    void set_antenna(const string &antenna);
+
     double set_input_rate(double rate);
     double get_input_rate();
 
