@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>220</width>
-    <height>259</height>
+    <width>211</width>
+    <height>320</height>
    </rect>
   </property>
   <property name="floating">
@@ -22,14 +22,14 @@
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="lnbLabel">
         <property name="text">
          <string>LNB LO</string>
         </property>
         <property name="indent">
-         <number>10</number>
+         <number>-1</number>
         </property>
        </widget>
       </item>
@@ -180,8 +180,8 @@
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
        <widget class="QLabel" name="freqCorrLabel">
         <property name="text">
          <string>Frequency corr.</string>
@@ -191,7 +191,7 @@
         </property>
        </widget>
       </item>
-      <item>
+      <item row="0" column="1">
        <widget class="QSpinBox" name="freqCorrSpinBox">
         <property name="suffix">
          <string> ppm</string>
@@ -204,6 +204,29 @@
         </property>
         <property name="value">
          <number>0</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="antSelectorLabel">
+        <property name="toolTip">
+         <string>Select active antenna connector</string>
+        </property>
+        <property name="text">
+         <string>Antenna</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="antSelector">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Select active antenna connector</string>
         </property>
        </widget>
       </item>
