@@ -4,6 +4,7 @@
        NEW: Qt 5 support.
        NEW: GNU Radio 3.7 support.
        NEW: HackRF Jawbreaker support.
+       NEW: Option to select antenna connector on e.g. USRP devices.
      FIXED: Frequency control widget with recent Qt was broken.
      FIXED: Bug that caused audio FFT data to be leaked into the I/Q FFT.
   IMPROVED: Y-axis panning (click-and-drag).
